fix(build): añadir javafx.web/media a jpackage y sincronizar version instalador
jpackage --add-modules omitia javafx.web y javafx.media, lo que provocaba un
NoClassDefFoundError silencioso en el hilo de FX (sin dialogo ni crash) y
desactivaba de facto la ayuda contextual (WebView) en la app empaquetada;
en dev (mvn javafx:run) nunca se reproducia porque el classpath ya incluye
esos modulos. installer.nsi tenia la version "14.0.1" fijada literalmente en
8 sitios, desconectada de $APP_VERSION en build-nsis.ps1: el build reportaba
exito con el nombre de fichero correcto pero generaba el .exe con la version
anterior. Sube APP_VERSION a v14.1.0 y documenta cierre de sesion en STATE.md.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>